@@ -5,6 +5,8 @@ import com.quizapp.Stackoverflow.model.Question;
 import com.quizapp.Stackoverflow.model.Tag;
 import org.springframework.stereotype.Component;
 
+import java.util.stream.Collectors;
+
 @Component
 public class QuestionMapper {
     public QuestionResponseDTO toDTO(Question question) {
@@ -13,7 +15,7 @@ public class QuestionMapper {
         dto.setTitle(question.getTitle());
         dto.setContent(question.getContent());
         dto.setUsername(question.getUser().getUsername());
-        dto.setTags(question.getTags().stream().map(Tag::getName).toList());
+        dto.setTags(question.getTags().stream().map(Tag::getName).collect(Collectors.toList()));
         dto.setVoteCount(question.getVoteCount());
         dto.setCreatedAt(question.getCreatedAt());
         return dto;
